GNOME Bugzilla – Bug 728600
"Bold color: Same as text color" is not the same as text color
Last modified: 2018-02-12 19:56:05 UTC
Profile->Colors, choose a text color that's not black or white (either the pre-defined green, gray or solarized, or a custom). Enable "Bold color: Same as text color". echo -e 'normal\u2588 \e[1m\u2588bold\e[0m' Notice that the bold color is actually not the same as the normal text color. vte_terminal_set_color_bold_rgba()'s documentation is vague, it says "If @bold is %NULL then the default color is used", it's not clear to me whether "the default color" actually refers to the default foreground color of the terminal, or just means that some default is made up. In turn, it calls vte_terminal_generate_bold() which makes up some color on its own. It's not clear to me if vte should be modified to match g-t, or the other way around. -o-o- On a related note, maybe the "Same as text color" checkbox should be removed, and the bold color should be made part of the built-in schemes. I see two reasons for this: - If you disable "Same as text color", the actual color value doesn't change as you choose a new fg/bg scheme from the dropdown list. You might easily end up with a scheme where bold color (either black or white) is the same as the background, making it unreadable. - As per bug 655030 comment 11, the Solarized schemes should ideally ship their bold color too. With this change, we'd no longer pass NULL to vte_terminal_set_color_bold_rgba() which is the problematic case there.
*** Bug 750333 has been marked as a duplicate of this bug. ***
See also bug 793152.
Fixed using the patch from bug 793152.