widget: No longer generate bold color automatically

Use the one explicitly provided via API, or the foreground color.
This also fixes how OSC 10 affects bold color.

https://bugzilla.gnome.org/show_bug.cgi?id=728600
https://bugzilla.gnome.org/show_bug.cgi?id=793152